--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/test.html">Aptitude Tests</a>
+                    <a class="nav-link" href="./test.html">Aptitude Tests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/video.html">Video</a>
+                    <a class="nav-link" href="./video.html">Video</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -39,21 +39,21 @@
                         Class
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="./pages/FYBCA.html">FYBCA</a>
-                        <a class="dropdown-item" href="./pages/SYBCA.html">SYBCA</a>
+                        <a class="dropdown-item" href="./FYBCA.html">FYBCA</a>
+                        <a class="dropdown-item" href="./SYBCA.html">SYBCA</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true" href="#">FYBCS</a>
                         <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true" href="#">SYBCA</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/reading.html">Reading</a>
+                    <a class="nav-link" href="./reading.html">Reading</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/login.html">Login</a>
+                    <a class="nav-link" href="./login.html">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/register.html">Register</a>
+                    <a class="nav-link" href="./register.html">Register</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
