--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./images/photo1.jpg" class="d-block w-100 img-fluid" alt="...">
+                <img src="./photo1.jpg" class="d-block w-100 img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
 
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./images/photo2.jpg" class="d-block w-100 img-fluid" alt="...">
+                <img src="./photo2.jpg" class="d-block w-100 img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
 
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./images/photo3.jpg" class="d-block w-100 img-fluid" alt="...">
+                <img src="./photo3.jpg" class="d-block w-100 img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
 
                 </div>
