--- a/reading.html
+++ b/reading.html
@@ -64,7 +64,60 @@
     </nav>
 
 
-   
+   <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark my-4">
+        <div class="col-md-6 px-0">
+            <h1 class="display-4 font-italic"> Raigad Fort</h1>
+            <p class="lead my-3">Chatrapati Shivaji seized the fort in 1656,
+                then known as the fort of Rari from Chandraraoji More,
+                The King of Jawali. Shivaji renovated and expanded the fort of Rairi and renamed it as Raigad (King's
+                Fort). It became the capital of Chatrapati Shivaji's Maratha Empire..</p>
+            <h1 class="display-7 font-italic"> Geography</h1>
+            <p class="lead my-3">The fort rises 820 metres (2,700 ft) above the sea level and is located in the Sahyadri
+                mountain range. There are approximately 1737 steps leading to the fort.</p>
+            <p class="lead my-3">The height of this ropeway is 400 meters in height and 750 meters in length and takes
+                only 4 minutes</p>
+            <p class="lead mb-0"><a href="https://en.wikipedia.org/wiki/Raigad_Fort"
+                    class="text-white font-weight-bold">Continue reading...</a></p>
+        </div>
+    </div>
+
+
+    <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark my-4">
+        <div class="col-md-6 px-0">
+            <h1 class="display-4 font-italic"> Pratapgad Fort</h1>
+            <p class="lead my-3">The Maratha king Shivaji commissioned Moropant Trimbak Pingle,
+                his prime minister, to undertake the construction of this fort in order to defend the banks of the Nira
+                and the Koyna rivers,
+                and to defend the Par pass.</p>
+            <h1 class="display-7 font-italic"> Geography</h1>
+            <p class="lead my-3">Pratapgad fort is located 15 kilometres (9.3 mi) from Poladpur and 23 kilometres (14
+                mi) west of Mahabaleshwar,
+                a popular hill station in the area.</p>
+            <p class="lead mb-0"><a href="https://en.wikipedia.org/wiki/Pratapgad"
+                    class="text-white font-weight-bold">Continue reading...</a></p>
+        </div>
+    </div>
+
+
+
+    <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark my-4">
+        <div class="col-md-6 px-0">
+            <h1 class="display-4 font-italic"> Daulatabad Fort</h1>
+            <p class="lead my-3">The fort is a place of extraordinary strength. The only means of access to the summit
+                is by a narrow bridge, with the passage for not more than two people abreast, and a long gallery,
+                excavated in the rock, which has, for the most part, a very gradual upward slope.</p>
+            <h1 class="display-7 font-italic"> Geography</h1>
+            <p class="lead my-4">Daulatabad Fort, also known as Devagiri or Deogiri, is a historical fortified citadel
+                located in Aurangabad, Maharashtra.</p>
+                <p class="lead my-3">India. It was the capital of the Yadava dynasty (9th century–14th
+                    century CE), for a brief time the capital of the Delhi Sultanate (1327–1334), and later a secondary
+                    capital of the Ahmadnagar Sultanate (1499–1636). Around the sixth century CE, Devagiri
+                    emerged as an important uplands town near present-day Aurangabad.</p>
+            <p class="lead mb-0"><a href="https://en.wikipedia.org/wiki/Raigad_Fort"
+                    class="text-white font-weight-bold">Continue reading...</a></p>
+        </div>
+
+    </div>
 
     <div class="container my-4">
         <footer class="blog-footer">
