--- a/reading.html
+++ b/reading.html
@@ -113,7 +113,7 @@
                     century CE), for a brief time the capital of the Delhi Sultanate (1327–1334), and later a secondary
                     capital of the Ahmadnagar Sultanate (1499–1636). Around the sixth century CE, Devagiri
                     emerged as an important uplands town near present-day Aurangabad.</p>
-            <p class="lead mb-0"><a href="https://en.wikipedia.org/wiki/Raigad_Fort"
+            <p class="lead mb-0"><a href="https://en.wikipedia.org/wiki/Daulatabad_Fort"
                     class="text-white font-weight-bold">Continue reading...</a></p>
         </div>
 
