--- a/SYBCA.html
+++ b/SYBCA.html
@@ -46,7 +46,7 @@
                         <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true" href="#">SYBCA</a>
                     </div>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item ">
                     <a class="nav-link" href="./reading.html">Reading</a>
                 </li>
                 <li class="nav-item">
